src/test/contracts/negative/error_reverse_app.mligo

let f (x : int) = x + 1

let typing_error = "Hello" |> f
